MDEV-30260: Slave crashed:reload_acl_and_cache during shutdown

WIP patch

The signal handler thread can use various different runtime
resources when processing a SIGHUP (e.g. master-info information).
Currently, the shutdown process waits for the termination of the
signal thread after performing cleanup. However, this could cause
resources actively used by the signal handler to be freed while
reload_acl_and_cache() is processing.

Where it is still desirable for the signal handler to receive
signals during the shutdown process, e.g. to process kill -9 on a
slow shutdown; it must be ensured that a SIGHUP has finished
processing before performing any cleanup related activities. This
patch adds in additional synchronization such that the server will
wait for any active SIGHUP processing to finish before killing any
connections or starting cleanup of resources.

Reviewed By:
============
<TODO>